Bug 777476 - text bounding boxes should ignore whitespace-only nodes when whitespace compression suppresses them. r=jwatt